--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 		      <hr class="border-light">
 		      <div class="text-center">
-		        <p class="mb-0">&copy; 2024 Sister's Bakery . All rights reserved.</p>
+		        <p class="mb-0">&copy; 2024 Sister's Bakery . All rights reservedd.</p>
 		      </div>
 		    </div>
 		  </footer>
